# Legal-MCP

./: .gitignore  Dockerfile  README.md  TODOS.md  docker-compose.build.yml  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
.agents/skills/: gstack  gstack-autoplan  gstack-benchmark  gstack-browse  gstack-canary  gstack-careful  gstack-checkpoint  gstack-cso  gstack-design-consultation  gstack-design-html  gstack-design-review  gstack-design-shotgun  gstack-devex-review  gstack-document-release  gstack-freeze  gstack-guard  gstack-health  gstack-investigate  gstack-land-and-deploy  gstack-learn  gstack-office-hours  gstack-open-gstack-browser  gstack-pair-agent  gstack-plan-ceo-review  gstack-plan-design-review  gstack-plan-devex-review  gstack-plan-eng-review  gstack-qa  gstack-qa-only  gstack-retro  gstack-review  gstack-setup-deploy  (+4 more)
Docs/: agent-observability.md  client-setup.md  haoran-main-design-20260521-012849.md  real-data-trial.md  team-deployment.md  v1-implementation-plan.md
tests/: test_admin_server.py  test_agent_config.py  test_agent_graph.py  test_agent_observability.py  test_agent_router.py  test_audit.py  test_cli.py  test_deployment_files.py  test_disclosure_audit.py  test_http_server.py  test_identity.py  test_import_pipeline.py  test_installer_docs.py  test_lookup.py  test_mcp_protocol.py  test_mcp_server.py  test_planner.py  test_policy.py  test_proxy.py  test_query_authorization.py  test_query_catalog.py  test_schema.py  test_search_tools.py  test_setup_doctor.py  test_team_deployment_docs.py  test_tool_catalog.py  test_tools.py
(+41 files in other folders)
